--- a/technical_report.qmd
+++ b/technical_report.qmd
@@ -67,41 +67,37 @@ Success Criteria:
 - pandas
 - requests
 - scikit-learn
-- seaborn
 - shap
-- streamlit
-- twine
-- quarto
-* Environments: The virtual environment UV was used for htis project 
-* Reproducibility Steps: Run the functions in order as given in the Tutorial
+* Environments: The virtual environment UV was used for this project 
+* Reproducibility Steps: Run the functions in order as given in the [tutorial](tutorial.qmd)
 
 ## Results & Diagnostics
 
 `_TODO: Summarize the main metrics, charts, or model diagnostics produced. Include links to figures or tables once available._`
 Main Metrics:
-the main metrics for the plots and data of importance are as fallowes
-    genaral move revinue:
+The main metrics for the plots and data of importance are as follows:
+    General Movie Revenue:
         mean = 9.1 e^7
         sd = 1. e^8
-    season of releas:
-        spring has the hiest revinue (there isnt a significant difrence between any except for summer and fall summer is beter (0.011))
+    Season of Release:
+        spring has the highest revenue (there isn't a significant difference between any except for summer and fall summer is better (0.011))
         fall:   mean =  5.5 e^7,    sd = 7.17 e^7
         winter: mean =  7.9 e^7,    sd = 7.62 e^7
         spring: mean =  9.3 e^8,    sd = 1.3 e^8
         summer: mean =  1.493 e^8,  sd = 1.8 e^8
 
-    Genra:
-        the hiest means are in 'Musicals', 'Action', 'Adventuer' with means and sd of
+    Genre:
+        the highest means are in 'Musicals', 'Action', 'Adventure' with means and sd of
         Musicals: mean = 1.6 e^8 ,sd = 1.8 e^8
         Action:   mean = 1.9 e^8 ,sd = 2.18 e^8
-        Adventuer:mean = 1.88 e^8,sd = 1.78 e^8
+        Adventure:mean = 1.88 e^8,sd = 1.78 e^8
 
     Movie Rating:
         PG: mean = 1.2 e^8 ,sd = 1.5 e^8
         R: mean = 5.5 e^7  ,sd = 6.4 e^7
 
     Production Method:
-        Anamation/ Live Actin: mean = 1.58 e^8 ,sd = 1.68 e^8
+        Animation/ Live Actin: mean = 1.58 e^8 ,sd = 1.68 e^8
         Digital Animation:     mean = 2.1 e^8  ,sd = 1.7 e^8
 
 
@@ -110,9 +106,9 @@ the main metrics for the plots and data of importance are as fallowes
 Charts:
 
 Model Diagnostics:
-mse
-crose valid daion 
-variable and prepostions plot
+MSE
+Cross Validation 
+Variable and Prepositions Plot
 
 ## Discussion & Next Steps
 
@@ -120,10 +116,10 @@ variable and prepostions plot
 Results:
 
 Limitations:
-the catigorical and numarical analasis for coralation cant show causeation so we dont know if ajusting one will directly influence the other. whats more is that none of the resolts shown significance, this means that the vareance of revinue in any of our analasises is not difrent form the avrage mean.
+The categorical and numerical analysis for correlation can't show causation so we don't know if adjusting one will directly influence the other. Additionally, none of the results shown significance, this means that the variance of revenue in any of our analyses is not different form the average mean.
 
 Open Questions:
 
 
 Future Experiments:
-inorder to reduce the amount of vareance it would be smart to seporte data more an exsample might be only action movies in winter compared to adventuer movies in winter. this would hopefully reduec the vareance and creat a more acurate analsis aswll as show any influence between vareables for exsample if R movies earning less revinue because most of them where relesed in winter. an analasis of movie ratings for these movies would also be informative as to what watchers value and there for what you could charge more for.
+In order to reduce the amount of variance it would be smart to separate data more, an example might be only action movies in winter compared to adventure movies in winter. This would hopefully reduce the variance and create a more accurate analysis as well as show any influence between variables, for example if R movies earning less revenue because most of them were released in winter. An analysis of movie ratings for these movies would also be informative as to what watchers value and there for what you could charge more for.
